fix(VCard): allow titles to wrap by default

--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -53,7 +53,7 @@ $card-title-overflow: hidden !default;
 $card-title-padding: .5rem 1rem !default;
 $card-title-text-overflow: ellipsis !default;
 $card-title-text-transform: none !default;
-$card-title-white-space: nowrap !default;
+$card-title-white-space: normal !default;
 $card-title-word-break: normal !default;
 $card-title-word-wrap: break-word !default;
 
